crates/uitest/fixtures/ty_check/recv_not_variant_of_msg.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/recv_not_variant_of_msg.fe
---
error[8-0045]: recv block missing msg variants
   ┌─ recv_not_variant_of_msg.fe:47:10
   │
47 │     recv BankMsg {
   │          ^^^^^^^ missing variants: Withdraw

error[8-0048]: type is not a variant of the specified msg
   ┌─ recv_not_variant_of_msg.fe:55:9
   │
55 │         TokenMsg::Transfer { to, amount } -> bool uses () {
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Transfer` is not a variant of `BankMsg`
   │
   = in a named recv block, only variants defined in that `msg` block are allowed

error[8-0048]: type is not a variant of the specified msg
   ┌─ recv_not_variant_of_msg.fe:60:9
   │
60 │         CustomMsg { data: d } -> bool uses () {
   │         ^^^^^^^^^^^^^^^^^^^^^ `CustomMsg` is not a variant of `BankMsg`
   │
   = in a named recv block, only variants defined in that `msg` block are allowed
